--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,99 @@
 .logo{
   width: 20%;
 }
+mat-dialog-content {
+  margin-top: 10px;
+  animation: fadeIn 1s ease;
+}
+
+/* Contenitore per la login e registrazione */
+.register-container {
+
+  border-radius: 12px;
+  width: 100%;
+  max-width: 400px;
+
+}
+
+/* Animazione di fade-in */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* Titoli */
+h2 {
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: black;
+}
+
+/* Etichette dei form */
+.form-label {
+  font-weight: 600;
+  font-size: 14px;
+}
+
+/* Campi di input */
+.form-control {
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.form-control:focus {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  border-color: black;
+}
+
+/* Pulsante principale (Login/Registrati) */
+.btn-primary {
+  background: linear-gradient(90deg, #222020, #8f8c8c);
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
+
+.btn-primary:hover {
+  background: linear-gradient(90deg, #000000, #000000);
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+/* Link tra login e registrazione */
+.text-center a {
+  color: black;
+  font-weight: 600;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.text-center a:hover {
+  color: black;
+}
+
+.text-center button {
+  background: none;
+  border: none;
+  color: black;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.text-center button:hover {
+  color: black;
+}
+
+/* Margine per separare gli elementi */
+.mb-3 {
+  margin-bottom: 1.5rem;
+}
+
+.mt-3 {
+  margin-top: 1rem;
+}
