il login è implementato con successo , le chiamate http sul back end sono corrette

--- a/src/app/components/adminpage/adminpage.component.css
+++ b/src/app/components/adminpage/adminpage.component.css
@@ -9,6 +9,21 @@
   color: #fff; /* Testo bianco su sfondo scuro */
   overflow: hidden; /* Impedisce che il contenuto esca fuori dal layout */
 }
+.logout-btn {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 14px;
+  float: right;
+  margin-top: -35px;
+}
+
+.logout-btn:hover {
+  background-color: #ff1a1a;
+}
 
 /* Overlay sfocato */
 .blur-overlay {
