--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -6,6 +6,7 @@
   <div class="container">
     <div class="header">
       <h2>Pannello di controllo</h2>
+      <span class="username">{{ username }}</span>
       <button class="logout-btn" (click)="logout()" >Logout</button>
     </div>
     <hr class="horizontalrow">
