--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,34 @@
 .logo{
   width: 20%;
 }
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.user-info .username {
+  font-size: 1rem;
+  font-weight: 600;
+  color: black;
+  opacity: 0;
+  transform: translateX(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.user-info:hover .username {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+mat-icon {
+  color: black;
+  font-size: 1.5rem;
+  transition: transform 0.3s ease;
+}
+
+mat-icon:hover {
+  transform: scale(1.2);
+  color: black;
+}
