--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -28,12 +28,12 @@
     </div>
   </mat-dialog-content>
 </ng-template>
-<!--
+
 <ng-template #registerDialog>
   <mat-dialog-content>
     <div class="register-container">
       <h2>Crea un Account</h2>
-      <form id="registerForm" (ngSubmit)="registerUser()">
+      <form id="registerForm" (ngSubmit)="register()">
         <div class="mb-3 name-row d-flex">
           <div class="form-group me-3">
             <label class="form-label">*Nome</label>
@@ -48,6 +48,11 @@
           <label class="form-label">*Data di nascita</label>
           <input type="date" [(ngModel)]="user.birthdate" class="form-control" name="birthdate" placeholder="Inserisci il tuo cognome" required>
         </div>
+        <div class="mb-3">
+          <label class="form-label">*Nazionalità</label>
+          <input type="text" [(ngModel)]="user.country" class="form-control" name="country" placeholder="Inserisci la tua provincia di nascita" required>
+        </div>
+        <!--
         <div class="mb-3">
           <label class="form-label">*Provincia di nascita</label>
           <input type="text" [(ngModel)]="user.province" class="form-control" name="province" placeholder="Inserisci la tua provincia di nascita" required>
@@ -64,17 +69,23 @@
           <label class="form-label">*Codice Fiscale</label>
           <input type="text" [(ngModel)]="user.id" class="form-control" name="id" placeholder="Inserisci il codice fiscale" maxlength="16" required>
         </div>
+        -->
         <div class="mb-3">
           <label class="form-label">*Email</label>
           <input type="email" [(ngModel)]="user.email" class="form-control" name="email" placeholder="Inserisci la tua email" required>
         </div>
         <div class="mb-3">
+          <label class="form-label">*Username</label>
+          <input type="text" [(ngModel)]="user.username" class="form-control" name="username" placeholder="Scegli un nome utente" required>
+        </div>
+        <div class="mb-3">
           <label class="form-label">*Password</label>
           <input type="password" [(ngModel)]="user.password" class="form-control" name="password" placeholder="Crea una password" required>
         </div>
+        <!--
         <div class="mb-3">
           <label class="form-label">*Conferma Password</label>
-          <input type="password" [(ngModel)]="user.confirmPassword" class="form-control" name="confirmPassword" placeholder="Conferma la tua password" required>
+          <input type="password" class="form-control" name="confirmPassword" placeholder="Conferma la tua password" required>
         </div>
         <div class="mb-3">
           <label class="form-label">Numero di Telefono</label>
@@ -97,6 +108,7 @@
           <input type="checkbox" class="form-check-input" id="terms" required>
           <label class="form-check-label" for="terms">*Accetto i <a href="/terms" target="_blank">Termini e Condizioni</a></label>
         </div>
+        -->
         <button type="submit" class="btn btn-primary">Registrati</button>
       </form>
       <div class="mt-3 text-center">
@@ -106,4 +118,3 @@
     </div>
   </mat-dialog-content>
 </ng-template>
--->
