--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -89,7 +89,7 @@
           <button
             [class.attivo]="isSelectionComplete()"
             [class.inattivo]="!isSelectionComplete()"
-            [disabled]="!isSelectionComplete()"   (click)="navigateToPath()" class="ricerca">Vedi risultati</button>
+            [disabled]="!isSelectionComplete()"   (click)="seeResults()" class="ricerca">Vedi risultati</button>
         </div>
       </form>
     </section>
