--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -1,5 +1,3 @@
-
-
 .register-container {
   border-radius: 12px;
   width: 100%;
@@ -8,23 +6,17 @@
 
 .name-row {
   display: flex;
-  gap: 1rem; /* Spaziatura tra i campi */
+  gap: 1rem;
 }
 
 .name-row .form-group {
-  flex: 1; /* Divide equamente lo spazio tra i due campi */
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 0.5rem;
+  flex: 1;
 }
 
 mat-dialog-content {
   margin-top: 10px;
   animation: fadeIn 1s ease;
 }
-
 
 /* Animazione di fade-in */
 @keyframes fadeIn {
@@ -98,13 +90,4 @@ h2 {
 .text-center button:active {
   transform: translateY(0); /* Torna alla posizione originale */
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); /* Ombra ridotta */
-}
-
-/* Margine per separare gli elementi */
-.mb-3 {
-  margin-bottom: 1.5rem;
-}
-
-.mt-3 {
-  margin-top: 1rem;
 }
