--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -3,87 +3,101 @@
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-<!-- Template per scegliere tra Registrati e Accedi -->
 <ng-template #authOptionsDialog>
   <mat-dialog-content>
     <h2>Accedi a EasyHome</h2>
     <form id="loginForm" (ngSubmit)="login()">
       <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" [(ngModel)]="user.email" class="form-control" id="email" placeholder="Inserisci la tua email" required>
+        <label class="form-label">Email</label>
+        <input type="email" name="username" [(ngModel)]="user.username" class="form-control" placeholder="Inserisci la tua email" required />
       </div>
       <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" [(ngModel)]="user.password" class="form-control" id="password" placeholder="Inserisci la tua password" required>
+        <label class="form-label">Password</label>
+        <input type="password" name="password" [(ngModel)]="user.password" class="form-control" placeholder="Inserisci la tua password" required />
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
 
+      <!-- Mostra errore se esiste -->
+      <div *ngIf="errorMessage" class="text-danger mt-2">
+        {{ errorMessage }}
+      </div>
     </form>
     <div class="mt-3 text-center">
-      <p>Non hai un account? <button class="form-control" (click)="openDialogWithPrevent($event,registerDialog)">Registrati</button></p>
+      <p class="mb-3">Non hai un account?</p>
+      <button class="form-control" (click)="openDialogWithPrevent($event,registerDialog)">Registrati</button>
     </div>
-    </mat-dialog-content>
+  </mat-dialog-content>
 </ng-template>
 
-<!-- Template per Registrati -->
 <ng-template #registerDialog>
   <mat-dialog-content>
     <div class="register-container">
       <h2>Crea un Account</h2>
-      <form id="registerForm" (ngSubmit)="registerUser()">
-        <div class="mb-3 name-row">
-          <div class="form-group">
-            <label for="firstName" class="form-label">*Nome</label>
-            <input type="text" [(ngModel)]="user.firstName" class="form-control" id="firstName" placeholder="Inserisci nome" required>
+      <form id="registerForm" (ngSubmit)="register()">
+        <div class="mb-3 name-row d-flex">
+          <div class="form-group me-3">
+            <label class="form-label">*Nome</label>
+            <input type="text" [(ngModel)]="user.firstName" class="form-control" name="firstName" placeholder="Inserisci nome" required>
           </div>
           <div class="form-group">
-            <label for="lastName" class="form-label">*Cognome</label>
-            <input type="text" [(ngModel)]="user.lastName" class="form-control" id="lastName" placeholder="Inserisci cognome" required>
+            <label class="form-label">*Cognome</label>
+            <input type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName" placeholder="Inserisci cognome" required>
           </div>
         </div>
         <div class="mb-3">
-          <label for="birthdate" class="form-label">*Data di nascita</label>
-          <input type="date" [(ngModel)]="user.birthdate" class="form-control" id="birthdate" placeholder="Inserisci il tuo cognome" required>
+          <label class="form-label">*Data di nascita</label>
+          <input type="date" [(ngModel)]="user.birthdate" class="form-control" name="birthdate" placeholder="Inserisci il tuo cognome" required>
         </div>
         <div class="mb-3">
-          <label for="province" class="form-label">*Provincia di nascita</label>
-          <input type="text" [(ngModel)]="user.province" class="form-control" id="province" placeholder="Inserisci la tua provincia di nascita" required>
+          <label class="form-label">*Nazionalità</label>
+          <input type="text" [(ngModel)]="user.country" class="form-control" name="country" placeholder="Inserisci la tua provincia di nascita" required>
+        </div>
+        <!--
+        <div class="mb-3">
+          <label class="form-label">*Provincia di nascita</label>
+          <input type="text" [(ngModel)]="user.province" class="form-control" name="province" placeholder="Inserisci la tua provincia di nascita" required>
         </div>
         <div class="mb-3">
-          <label for="city" class="form-label">*Comune di nascita</label>
-          <input type="text" [(ngModel)]="user.city" class="form-control" id="city" placeholder="Inserisci il tuo comune di nascita" required>
+          <label class="form-label">*Comune di nascita</label>
+          <input type="text" [(ngModel)]="user.city" class="form-control" name="city" placeholder="Inserisci il tuo comune di nascita" required>
         </div>
         <div class="mb-3">
-          <label for="cap" class="form-label">*CAP</label>
-          <input type="text" [(ngModel)]="user.cap" class="form-control" id="cap" placeholder="Inserisci il CAP del tuo comune" required>
+          <label class="form-label">*CAP</label>
+          <input type="text" [(ngModel)]="user.cap" class="form-control" name="cap" placeholder="Inserisci il CAP del tuo comune" required>
         </div>
         <div class="mb-3">
-          <label for="id" class="form-label">*Codice Fiscale</label>
-          <input type="text" [(ngModel)]="user.id" class="form-control" id="id" placeholder="Inserisci il codice fiscale" maxlength="16" required>
+          <label class="form-label">*Codice Fiscale</label>
+          <input type="text" [(ngModel)]="user.id" class="form-control" name="id" placeholder="Inserisci il codice fiscale" maxlength="16" required>
+        </div>
+        -->
+        <div class="mb-3">
+          <label class="form-label">*Email</label>
+          <input type="email" [(ngModel)]="user.email" class="form-control" name="email" placeholder="Inserisci la tua email" required>
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">*Email</label>
-          <input type="email" [(ngModel)]="user.email" class="form-control"  placeholder="Inserisci la tua email" required>
+          <label class="form-label">*Username</label>
+          <input type="text" [(ngModel)]="user.username" class="form-control" name="username" placeholder="Scegli un nome utente" required>
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">*Password</label>
-          <input type="password" [(ngModel)]="user.password" class="form-control"  placeholder="Crea una password" required>
+          <label class="form-label">*Password</label>
+          <input type="password" [(ngModel)]="user.password" class="form-control" name="password" placeholder="Crea una password" required>
+        </div>
+        <!--
+        <div class="mb-3">
+          <label class="form-label">*Conferma Password</label>
+          <input type="password" class="form-control" name="confirmPassword" placeholder="Conferma la tua password" required>
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label">*Conferma Password</label>
-          <input type="password" [(ngModel)]="user.confirmPassword" class="form-control" id="confirmPassword" placeholder="Conferma la tua password" required>
+          <label class="form-label">Numero di Telefono</label>
+          <input type="tel" [(ngModel)]="user.phoneNumber" class="form-control" name="phoneNumber" placeholder="Inserisci il tuo numero di telefono">
         </div>
         <div class="mb-3">
-          <label for="phoneNumber" class="form-label">Numero di Telefono</label>
-          <input type="tel" [(ngModel)]="user.phoneNumber" class="form-control" id="phoneNumber" placeholder="Inserisci il tuo numero di telefono">
+          <label class="form-label">Indirizzo</label>
+          <input type="text" [(ngModel)]="user.address" class="form-control" name="address" placeholder="Inserisci il tuo indirizzo">
         </div>
         <div class="mb-3">
-          <label for="address" class="form-label">Indirizzo</label>
-          <input type="text" [(ngModel)]="user.address" class="form-control" id="address" placeholder="Inserisci il tuo indirizzo">
-        </div>
-        <div class="mb-3">
-          <label for="gender" class="form-label">*Sesso</label>
-          <select [(ngModel)]="user.gender" class="form-control" id="gender" required>
+          <label class="form-label">*Sesso</label>
+          <select [(ngModel)]="user.gender" class="form-control" name="gender" required>
             <option value="" selected disabled>Seleziona</option>
             <option value="male">Maschio</option>
             <option value="female">Femmina</option>
@@ -94,11 +108,12 @@
           <input type="checkbox" class="form-check-input" id="terms" required>
           <label class="form-check-label" for="terms">*Accetto i <a href="/terms" target="_blank">Termini e Condizioni</a></label>
         </div>
+        -->
         <button type="submit" class="btn btn-primary">Registrati</button>
       </form>
       <div class="mt-3 text-center">
-        <p>Hai già un account? <button class="form-control" (click)="openDialogWithPrevent($event,authOptionsDialog)">Accedi</button>
-        </p>
+        <p>Hai già un account?</p>
+        <button class="form-control" (click)="openDialogWithPrevent($event,authOptionsDialog)">Accedi</button>
       </div>
     </div>
   </mat-dialog-content>
