--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,106 +1,34 @@
 .logo{
   width: 20%;
 }
-
-.name-row {
+.user-info {
   display: flex;
-  gap: 1rem; /* Spaziatura tra i campi */
-}
-
-.name-row .form-group {
-  flex: 1; /* Divide equamente lo spazio tra i due campi */
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-mat-dialog-content {
-  margin-top: 10px;
-  animation: fadeIn 1s ease;
-}
-
-
-/* Animazione di fade-in */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-30px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-/* Titoli */
-h2 {
+  align-items: center;
+  gap: 8px;
   font-family: 'Poppins', sans-serif;
-  text-align: center;
+}
+
+.user-info .username {
+  font-size: 1rem;
   font-weight: 600;
-  margin-bottom: 20px;
   color: black;
+  opacity: 0;
+  transform: translateX(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-/* Etichette dei form */
-.form-label {
-  font-weight: 600;
-  font-size: 14px;
+.user-info:hover .username {
+  opacity: 1;
+  transform: translateX(0);
 }
 
-/* Campi di input */
-.form-control {
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-}
-
-.form-control:focus {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  border-color: black;
-}
-
-/* Pulsante principale (Login/Registrati) */
-.btn-primary {
-  background: linear-gradient(90deg, #222020, #8f8c8c);
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: 600;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease;
-}
-
-.btn-primary:hover {
-  background: linear-gradient(90deg, #000000, #000000);
-  transform: translateY(-2px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-}
-
-/* Link tra login e registrazione */
-.text-center a {
+mat-icon {
   color: black;
-  font-weight: 600;
-  text-decoration: none;
-  transition: color 0.3s ease;
+  font-size: 1.5rem;
+  transition: transform 0.3s ease;
 }
 
-.text-center a:hover {
+mat-icon:hover {
+  transform: scale(1.2);
   color: black;
-}
-
-.text-center button {
-  background: none;
-  border: none;
-  color: black;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.text-center button:hover {
-  color: black;
-}
-
-/* Margine per separare gli elementi */
-.mb-3 {
-  margin-bottom: 1.5rem;
-}
-
-.mt-3 {
-  margin-top: 1rem;
 }
