mando foto e form al back

--- a/src/app/components/annunci/annunci.component.html
+++ b/src/app/components/annunci/annunci.component.html
@@ -6,14 +6,10 @@
   <mat-card *ngFor="let annuncio of annunci" class="annuncio-card">
     <img mat-card-image [src]="annuncio.foto" alt="Foto casa">
     <mat-card-content>
-      <h2>{{ annuncio.descrizione }}</h2>
-      <p><strong>Tipo:</strong> {{ annuncio.tipo }}</p> <!-- Nuovo campo -->
+      <h2>{{ annuncio.nome }}</h2>
       <p><strong>Prezzo:</strong> {{ annuncio.prezzo }} €</p>
       <p><strong>Metri Quadri:</strong> {{ annuncio.mq }} m²</p>
-      <p><strong>Camere:</strong> {{ annuncio.camere }}</p> <!-- Nuovo campo -->
-      <p><strong>Bagni:</strong> {{ annuncio.bagni }}</p> <!-- Nuovo campo -->
-      <p><strong>Anno di costruzione:</strong> {{ annuncio.anno }}</p> <!-- Nuovo campo -->
-      <p><strong>Posizione:</strong></p>
+      <!--<p><strong>Posizione:</strong></p>
       <google-map
         [height]="'200px'"
         [width]="'100%'"
@@ -24,7 +20,7 @@
           [title]="annuncio.descrizione"
           [label]="annuncio.etichetta">
         </map-marker>
-      </google-map>
+      </google-map>-->
     </mat-card-content>
   </mat-card>
 </div>
