Query del getImmobili() funzionante

--- a/src/app/components/aggiungi/aggiungi.component.html
+++ b/src/app/components/aggiungi/aggiungi.component.html
@@ -18,9 +18,9 @@
         <div class="form-field">
           <label for="tipo">Tipo di Immobile</label>
           <select id="tipo" formControlName="tipo">
-            <option value="casa">Casa</option>
-            <option value="appartamento">Appartamento</option>
-            <option value="villa">Villa</option>
+            <option value="Casa">Casa</option>
+            <option value="Appartamento">Appartamento</option>
+            <option value="Villa">Villa</option>
           </select>
         </div>
 
@@ -32,8 +32,8 @@
         <div class="form-field">
           <label for="categoria">Tipo di Annuncio</label>
           <select id="categoria" formControlName="categoria">
-            <option value="vendita">Vendita</option>
-            <option value="affitto">Affitto</option>
+            <option value="Vendita">Vendita</option>
+            <option value="Affitto">Affitto</option>
           </select>
         </div>
 
@@ -91,6 +91,12 @@
           </div>
         </div>
 
+      </div>
+      <div class="form-field">
+        <label for="provincia">Provincia</label>
+        <div>
+          <input id="provincia" formControlName="provincia" type="text" placeholder="Provincia">
+        </div>
       </div>
       <div class="form-field">
         <label for="indirizzo">Indirizzo</label>
