--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Google Fonts -->
@@ -6,11 +5,10 @@
 
 <mat-toolbar color="primary">
   <!-- Logo -->
-  <a [routerLink]="['/']">
+  <a (click)="navigateTo('/')">
     <img class="logo" src="assets/logo1.jpg" alt="Logo">
   </a>
 
-  <!-- Menu items -->
   <!-- Menu items -->
   <div class="menu">
     <ng-container *ngFor="let item of menuItems">
@@ -25,13 +23,14 @@
       </button>
       <!-- Comportamento normale per gli altri bottoni -->
       <ng-template #normalButton>
-        <button mat-button [routerLink]="item.route">
+        <button mat-button (click)="navigateTo(item.route)">
           <mat-icon>{{ item.icon }}</mat-icon>
           <span>{{ item.label }}</span>
         </button>
       </ng-template>
     </ng-container>
   </div>
+
   <!-- Template per Modifica/Aggiungi Annuncio -->
   <ng-template #editAddDialog>
     <mat-dialog-content>
@@ -55,7 +54,6 @@
     </mat-dialog-content>
   </ng-template>
 
-  <!-- Azione a destra (esempio: login/logout) -->
   <!-- Azione a destra (login/logout con nome utente) -->
   <div class="user-info">
     <button mat-icon-button aria-label="Account" (click)="toggleLogin()">
