il login è implementato con successo , le chiamate http sul back end sono corrette

--- a/src/app/components/aggiungi/aggiungi.component.html
+++ b/src/app/components/aggiungi/aggiungi.component.html
@@ -1,8 +1,7 @@
-
 <main>
-<header>
-  <navbar></navbar>
-</header>
+  <header>
+    <navbar></navbar>
+  </header>
 
   <div class="wizard-container">
     <!-- Passo 1: Dettagli dell'annuncio -->
@@ -26,7 +25,7 @@
 
         <div class="form-field">
           <label for="descrizione">Descrizione</label>
-          <textarea id="descrizione" formControlName="descrizione"  placeholder="Descrizione dell'annuncio"></textarea>
+          <textarea id="descrizione" formControlName="descrizione" placeholder="Descrizione dell'annuncio"></textarea>
         </div>
 
         <div class="form-field">
@@ -41,82 +40,89 @@
       </form>
     </div>
 
+    <!-- Passo 2: Dettagli finanziari e struttura -->
+    <div *ngIf="passoAttuale === 2" class="step">
+      <h2 class="step-title">Passo 2: Dettagli finanziari e struttura</h2>
+      <form [formGroup]="form">
+        <div class="form-field">
+          <label for="prezzo">Prezzo</label>
+          <input id="prezzo" formControlName="prezzo" type="number" placeholder="Prezzo dell'immobile">
+        </div>
+        <div class="form-field">
+          <label for="mq">Metri Quadri</label>
+          <input id="mq" formControlName="mq" type="number" placeholder="Metri quadri dell'immobile">
+        </div>
+        <div class="form-field">
+          <label for="anno">Anno di costruzione</label>
+          <input id="anno" formControlName="anno" type="number" placeholder="Anno di costruzione">
+        </div>
+        <div class="form-field">
+          <label for="camere">Camere</label>
+          <input id="camere" formControlName="camere" type="number" placeholder="Numero di camere">
+        </div>
+        <div class="form-field">
+          <label for="bagni">Bagni</label>
+          <input id="bagni" formControlName="bagni" type="number" placeholder="Numero di bagni">
+        </div>
 
+        <div class="button-group">
+          <button type="button" class="prev-button" (click)="tornaPasso()">Back</button>
+          <button type="button" class="next-button" (click)="passaPasso()">Next</button>
+        </div>
+      </form>
+    </div>
 
-  <!-- Passo 2: Dettagli finanziari e struttura -->
-  <div *ngIf="passoAttuale === 2" class="step">
-    <h2 class="step-title">Passo 2: Dettagli finanziari e struttura</h2>
-    <form [formGroup]="form">
-      <div class="form-field">
-        <label for="prezzo">Prezzo</label>
-        <input id="prezzo" formControlName="prezzo" type="number" placeholder="Prezzo dell'immobile">
-      </div>
-      <div class="form-field">
-        <label for="mq">Metri Quadri</label>
-        <input id="mq" formControlName="mq" type="number" placeholder="Metri quadri dell'immobile">
-      </div>
-      <div class="form-field">
-        <label for="anno">Anno di costruzione</label>
-        <input id="anno" formControlName="anno" type="number" placeholder="Anno di costruzione">
-      </div>
-      <div class="form-field">
-        <label for="camere">Camere</label>
-        <input id="camere" formControlName="camere" type="number" placeholder="Numero di camere">
-      </div>
-      <div class="form-field">
-        <label for="bagni">Bagni</label>
-        <input id="bagni" formControlName="bagni" type="number" placeholder="Numero di bagni">
-      </div>
+    <!-- Passo 3: Posizione e conferma -->
+    <div *ngIf="passoAttuale === 3" class="step">
+      <h2 class="step-title">Passo 3: Posizione e conferma</h2>
+      <form [formGroup]="form">
+        <div class="form-field">
+          <label for="foto">Foto (Puoi caricare più immagini)</label>
+          <input id="foto" type="file" (change)="onFileChange($event)" multiple accept="image/*">
 
-      <div class="button-group">
+          <!--Mostra anteprima delle immagini caricate-->
+          <div *ngIf="anteprimaImmagini.length > 0" class="preview-images">
+            <div *ngFor="let file of anteprimaImmagini">
+              <img [src]="file" alt="Anteprima immagine" class="preview-img">
+            </div>
+          </div>
 
-        <button type="button" class="prev-button" (click)="tornaPasso()">Back</button>
-        <button type="button" class="next-button" (click)="passaPasso()">Next</button>
-      </div>
-    </form>
-  </div>
-
-  <!-- Passo 3: Posizione e conferma -->
-  <div *ngIf="passoAttuale === 3" class="step">
-    <h2 class="step-title">Passo 3: Posizione e conferma</h2>
-    <form [formGroup]="form">
-      <div class="form-field">
-        <label for="foto">Foto (Puoi caricare più immagini)</label>
-        <input id="foto" type="file" (change)="onFileChange($event)" multiple accept="image/*">
-
-        <!--Mostra anteprima delle immagini caricate-->
-        <div *ngIf="anteprimaImmagini.length > 0" class="preview-images">
-          <div *ngFor="let file of anteprimaImmagini">
-            <img [src]="file" alt="Anteprima immagine" class="preview-img">
+        </div>
+        <div class="form-field">
+          <label for="provincia">Provincia</label>
+          <div>
+            <input id="provincia" formControlName="provincia" type="text" placeholder="Provincia">
           </div>
         </div>
 
-      </div>
-      <div class="form-field">
-        <label for="provincia">Provincia</label>
-        <div>
-          <input id="provincia" formControlName="provincia" type="text" placeholder="Provincia">
+        <div class="form-field">
+          <label for="indirizzo">Indirizzo</label>
+          <div>
+            <input id="indirizzo" formControlName="indirizzo" type="text" placeholder="Indirizzo">
+            <button type="button" (click)="verificaIndirizzo(form.get('indirizzo')?.value)">Verifica Indirizzo</button>
+          </div>
         </div>
-      </div>
-      <div class="form-field">
-        <label for="indirizzo">Indirizzo</label>
-        <div>
-          <input id="indirizzo" formControlName="indirizzo" type="text" placeholder="Indirizzo">
-        </div>
-      </div>
-      <div class="form-field">
-        <label for="etichetta">Etichetta</label>
-        <input id="etichetta" formControlName="etichetta" type="text" placeholder="Etichetta dell'immobile">
-      </div>
-      <div class="button-group">
-        <button type="button" class="prev-button" (click)="tornaPasso()">Back</button>
-        <button type="button" class="submit-button" (click)="aggiungiAnnuncio()">Aggiungi Annuncio</button>
-      </div>
-    </form>
-  </div>
-</div>
 
-<footer>
-  <app-footer></app-footer>
-</footer>
+        <!-- Mostra latitudine e longitudine dopo la verifica -->
+        <div *ngIf="latitudine && longitudine">
+          <p><strong>Latitudine:</strong> {{ latitudine }}</p>
+          <p><strong>Longitudine:</strong> {{ longitudine }}</p>
+        </div>
+
+        <div class="form-field">
+          <label for="etichetta">Etichetta</label>
+          <input id="etichetta" formControlName="etichetta" type="text" placeholder="Etichetta dell'immobile">
+        </div>
+
+        <div class="button-group">
+          <button type="button" class="prev-button" (click)="tornaPasso()">Back</button>
+          <button type="button" class="submit-button" (click)="aggiungiAnnuncio()">Aggiungi Annuncio</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
 </main>
