--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -1,3 +1,7 @@
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap JS (facoltativo, solo se servono componenti interattivi come modali o dropdown) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <body>
@@ -7,15 +11,33 @@
     <div class="header">
       <h2>Pannello di controllo</h2>
       <span class="username">{{ username }}</span>
-      <button class="logout-btn" (click)="logout()" >Logout</button>
+      <button class="logout-btn" (click)="logout()">Logout</button>
     </div>
     <hr class="horizontalrow">
+
+    <div class="admin-container">
+      <h3>Lista degli utenti</h3>
+      <table class="table table-striped table-hover table-bordered">
+        <thead class="table-dark">
+        <tr>
+          <th>Username</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let username of userList">
+          <td>{{ username }}</td>
+        </tr>
+        </tbody>
+      </table>
+      <p *ngIf="userList.length === 0">Nessun utente trovato.</p>
+
+    </div>
 
     <!-- Cambia ruolo utente -->
     <div class="changeUserTypeSection">
       <h3>Cambia ruolo utente</h3>
       <div class="changeUserTypeContainer">
-        <form class="changeUserTypeForm" >
+        <form [formGroup]="changeUserTypeForm" (ngSubmit)="onChangeUserType()">
           <input type="text" formControlName="user_id_1" id="user_id" placeholder="ID User" required>
           <select formControlName="user_type" id="user_type" required>
             <option value="" selected disabled>-- Seleziona ruolo --</option>
@@ -33,7 +55,7 @@
     <div class="banUserSection">
       <h3>Banna utente</h3>
       <div class="banUserContainer">
-        <form class="banUserForm">
+        <form [formGroup]="banUserForm" (ngSubmit)="onBanUser()">
           <input type="text" formControlName="user_id_2" placeholder="ID User" required>
           <button type="submit" class="submit-btn">Applica</button>
         </form>
