bottone venditore/acquirente e delete back tramite username

--- a/src/app/components/errorpage/errorpage.component.html
+++ b/src/app/components/errorpage/errorpage.component.html
@@ -1,4 +1,3 @@
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,4 +12,4 @@
     <a href="/" class="home-button">Torna alla home</a>
   </div>
 </div>
-
+</body>
