bottone venditore/acquirente e delete back tramite username

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -81,7 +81,15 @@
       </span>
     </label>
   </div>
-
+  <div>
+    <!-- From Uiverse.io by elijahgummer -->
+    <ul>
+      <li style="--i:#616768;--j:#0b1217;">
+        <span class="icon">💬</span>
+        <span class="title" (click)="navigateTo('/messaggi')">Notifiche</span>
+      </li>
+    </ul>
+  </div>
 
 
 
