--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -153,3 +153,94 @@ mat-icon:hover {
   -webkit-transform: none;
   transform: none;
 }
+
+ul {
+  position: relative;
+  display: flex;
+  gap: 15px; /* Ridotto lo spazio tra i pulsanti */
+}
+
+ul li {
+  position: relative;
+  list-style: none;
+  top: 6px;
+  width: 45px; /* Ridotta la larghezza */
+  height: 45px; /* Ridotta l'altezza */
+  background: #302f2f;
+  border-radius: 45px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 7px 18px rgba(0, 0, 0, 0.1);
+  transition: 0.5s;
+}
+
+ul li:hover {
+  width: 135px; /* Adattata alla nuova dimensione */
+  box-shadow: 0 7px 18px rgba(0, 0, 0, 0);
+}
+
+ul li::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 45px;
+  background: linear-gradient(45deg, var(--i), var(--j));
+  opacity: 0;
+  transition: 0.5s;
+}
+
+ul li:hover::before {
+  opacity: 1;
+}
+
+ul li::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  width: 100%;
+  height: 100%;
+  border-radius: 45px;
+  background: linear-gradient(45deg, var(--i), var(--j));
+  transition: 0.5s;
+  filter: blur(12px);
+  z-index: -1;
+  opacity: 0;
+}
+
+ul li:hover::after {
+  opacity: 0.5;
+}
+
+ul li .icon {
+  color: #777;
+  font-size: 1.3em; /* Ridotto leggermente */
+  transition: 0.5s;
+  transition-delay: 0.25s;
+}
+
+ul li:hover .icon {
+  transform: scale(0);
+  color: black;
+  transition-delay: 0s;
+}
+
+ul li span {
+  position: absolute;
+}
+
+ul li .title {
+  color: #fff;
+  font-size: 0.9em; /* Ridotta leggermente */
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  transform: scale(0);
+  transition: 0.5s;
+  transition-delay: 0s;
+}
+
+ul li:hover .title {
+  transform: scale(1);
+  transition-delay: 0.25s;
+}
