--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,23 +27,26 @@
 </ng-template>
 <!-- Template per "Luogo" -->
 <ng-template #luogoTemplate let-dialogRef="dialogRef">
-  <div class="dialog-container-luogo">
-    <h2>Seleziona Provincia</h2>
-    <ul class="options-list">
-      <li *ngFor="let city of places"
-          class="option-item"
-          (click)="selectLuogo(dialogRef, city.name, city.coordinates)"
-          (mouseenter)="onMouseEnter(city)">
-        {{ city.name }}
-      </li>
-    </ul>
-
-    <!-- Aggiungi la mappa qui separatamente -->
-    <google-map [center]="center" [zoom]="zoom">
-      <map-marker *ngFor="let marker of markers"
-                  [position]="marker.coordinates">
-      </map-marker>
-    </google-map>
+  <div class="dialog-map-container">
+    <div class="dialog-container-luogo">
+      <h2>Seleziona Provincia</h2>
+      <ul class="options-list">
+        <li *ngFor="let city of places"
+            class="option-item"
+            (click)="selectLuogo(dialogRef, city.name, city.coordinates)"
+            (mouseenter)="onMouseEnter(city)">
+          {{ city.name }}
+        </li>
+      </ul>
+      <div class="map-container">
+        <!-- Aggiungi la mappa qui separatamente -->
+        <google-map [center]="center" [zoom]="zoom">
+          <map-marker *ngFor="let marker of markers"
+                      [position]="marker.coordinates">
+          </map-marker>
+        </google-map>
+      </div>
+    </div>
   </div>
 </ng-template>
 
